--- a/ZoomAndroid/res/values/dimens.xml
+++ b/ZoomAndroid/res/values/dimens.xml
@@ -9,5 +9,8 @@
          https://developer.android.com/design/patterns/navigation-drawer.html
     -->
     <dimen name="navigation_drawer_width">240dp</dimen>
-
+    
+    <dimen name="button_icon_height">80dp</dimen>
+	<dimen name="button_icon_height_large">120dp</dimen>
+	
 </resources>
