--- a/ZoomAndroid/res/layout-large/page_city_zoom.xml
+++ b/ZoomAndroid/res/layout-large/page_city_zoom.xml
@@ -55,8 +55,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/attractions_256" />
@@ -89,8 +89,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/inspire_256" />
@@ -126,8 +126,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
-                                android:layout_width="fill_parent"
-                                android:layout_height="fill_parent"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
                                 android:layout_weight="1"
                                 android:scaleType="fitCenter"
                                 android:src="@drawable/accomodation_256" >
@@ -162,8 +162,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon4"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="fill_parent"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/trafic_256" />
@@ -235,8 +235,8 @@
 
 	                                <ImageView
 	                                    android:id="@+id/ImageView03"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/shopping_256" />
@@ -270,7 +270,7 @@
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon9"
 	                                    android:layout_width="match_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/petrol_256" />
@@ -312,8 +312,8 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon6"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/money_256" />
@@ -377,8 +377,8 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon7"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/wifi_256" />
@@ -436,8 +436,8 @@
 
 	                                <ImageView
 	                                    android:id="@+id/ImageView01"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/medicine_256" />
