--- a/ZoomAndroid/res/layout-large/page_main.xml
+++ b/ZoomAndroid/res/layout-large/page_main.xml
@@ -66,7 +66,7 @@
 
                         <ImageView
                             android:id="@+id/imageViewIcon1"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             android:scaleType="fitCenter"
@@ -105,7 +105,7 @@
 
                         <ImageView
                             android:id="@+id/imageViewIcon2"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             android:scaleType="fitCenter"
@@ -177,7 +177,7 @@
 
                         <ImageView
                             android:id="@+id/imageViewIcon3"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             android:scaleType="fitCenter"
@@ -557,7 +557,7 @@
 
                         <ImageView
                             android:id="@+id/imageViewIcon4"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             android:scaleType="fitCenter"
