--- a/ZoomAndroid/res/layout-large/page_rainbow_wellness_and_spa.xml
+++ b/ZoomAndroid/res/layout-large/page_rainbow_wellness_and_spa.xml
@@ -50,7 +50,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
-	                            android:layout_width="wrap_content"
+	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
@@ -85,7 +85,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
-	                            android:layout_width="wrap_content"
+	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
@@ -120,7 +120,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
-	                            android:layout_width="wrap_content"
+	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
@@ -154,7 +154,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon4"
-	                            android:layout_width="wrap_content"
+	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
