--- a/ZoomAndroid/res/layout-normal/page_city_zoom.xml
+++ b/ZoomAndroid/res/layout-normal/page_city_zoom.xml
@@ -53,8 +53,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/attractions_256" />
@@ -87,8 +87,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/inspire_256" />
@@ -124,8 +124,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
-                                android:layout_width="fill_parent"
-                                android:layout_height="fill_parent"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
                                 android:layout_weight="1"
                                 android:scaleType="fitCenter"
                                 android:src="@drawable/accomodation_256" >
@@ -160,8 +160,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon4"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="fill_parent"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/trafic_256" />
@@ -233,8 +233,8 @@
 
 	                                <ImageView
 	                                    android:id="@+id/ImageView03"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/shopping_256" />
@@ -268,7 +268,7 @@
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon9"
 	                                    android:layout_width="match_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/petrol_256" />
@@ -310,8 +310,8 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon6"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/money_256" />
@@ -375,8 +375,8 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon7"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/wifi_256" />
@@ -434,8 +434,8 @@
 
 	                                <ImageView
 	                                    android:id="@+id/ImageView01"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+	                                    android:layout_width="match_parent"
+	                                    android:layout_height="0dp"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/medicine_256" />
