--- a/ZoomAndroid/res/layout/page_rainbow.xml
+++ b/ZoomAndroid/res/layout/page_rainbow.xml
@@ -216,7 +216,7 @@
 	                            android:layout_weight="1">
 
 	                            <LinearLayout
-	                                android:id="@+id/linearLayoutIcon6"
+	                                android:id="@+id/linearLayoutIcon5"
 	                                android:layout_width="match_parent"
 	                                android:layout_height="match_parent"
 	                                android:background="#BB007cb6"
@@ -225,7 +225,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
-	                                    android:id="@+id/imageViewIcon6"
+	                                    android:id="@+id/imageViewIcon5"
 	                                    android:layout_width="fill_parent"
 	                                    android:layout_height="fill_parent"
 	                                    android:layout_weight="1"
@@ -233,7 +233,7 @@
 	                                    android:src="@drawable/cruising_256" />
 
 	                                <TextView
-	                                    android:id="@+id/textViewTitle6"
+	                                    android:id="@+id/textViewIcon5"
 	                                    android:layout_width="fill_parent"
 	                                    android:layout_height="wrap_content"
 	                                    android:gravity="center_horizontal"
