--- a/ZoomAndroid/res/layout-large/page_kes.xml
+++ b/ZoomAndroid/res/layout-large/page_kes.xml
@@ -55,8 +55,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/banks_256" />
@@ -89,8 +89,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/atms_256" />
@@ -126,8 +126,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/excangeoffice_256" />
