--- a/ZoomAndroid/res/layout-normal/page_rainbow.xml
+++ b/ZoomAndroid/res/layout-normal/page_rainbow.xml
@@ -53,7 +53,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
-	                            android:layout_width="wrap_content"
+	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
@@ -90,7 +90,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
-	                            android:layout_width="wrap_content"
+	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
@@ -124,8 +124,8 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/nightlife_256" />
@@ -161,7 +161,7 @@
 
 	                        <ImageView
 	                            android:id="@+id/ImageView01"
-	                            android:layout_width="wrap_content"
+	                            android:layout_width="match_parent"
 	                            android:layout_height="wrap_content"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
@@ -225,7 +225,7 @@
 	                            android:layout_weight="1">
 
 	                            <LinearLayout
-	                                android:id="@+id/linearLayoutIcon6"
+	                                android:id="@+id/linearLayoutIcon5"
 	                                android:layout_width="match_parent"
 	                                android:layout_height="match_parent"
 	                                android:background="#BB007cb6"
@@ -234,7 +234,7 @@
 	                                android:padding="10dp" >
 
 	                                <ImageView
-	                                    android:id="@+id/imageViewIcon6"
+	                                    android:id="@+id/imageViewIcon5"
 	                                    android:layout_width="fill_parent"
 	                                    android:layout_height="fill_parent"
 	                                    android:layout_weight="1"
@@ -242,7 +242,7 @@
 	                                    android:src="@drawable/cruising_256" />
 
 	                                <TextView
-	                                    android:id="@+id/textViewTitle6"
+	                                    android:id="@+id/textViewIcon5"
 	                                    android:layout_width="fill_parent"
 	                                    android:layout_height="wrap_content"
 	                                    android:gravity="center_horizontal"
