--- a/ZoomAndroid/res/layout/main_drawer.xml
+++ b/ZoomAndroid/res/layout/main_drawer.xml
@@ -36,6 +36,8 @@
     
 <!-- CityZoom - city explore -->
     <RelativeLayout 
+        android:id="@+id/drawer_cityzoom_clickable"
+        android:background="@drawable/icon_background_drawable_drawer"
         android:layout_width="match_parent" 
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
@@ -69,6 +71,8 @@
 	    android:background="#333333"/>
 <!-- CityZoom - buisness -->
     <RelativeLayout 
+        android:id="@+id/drawer_busness_clickable"
+        android:background="@drawable/icon_background_drawable_drawer"
         android:layout_width="match_parent" 
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
@@ -102,6 +106,8 @@
 	    android:background="#333333"/>
     <!-- CityZoom - city favorite -->
     <RelativeLayout 
+        android:id="@+id/drawer_favorite_clickable"
+        android:background="@drawable/icon_background_drawable_drawer"
         android:layout_width="match_parent" 
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
@@ -137,6 +143,7 @@
     <!-- CityZoom - settings -->
     <RelativeLayout 
         android:id="@+id/drawer_settings_clickable"
+        android:background="@drawable/icon_background_drawable_drawer"
         android:layout_width="match_parent" 
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
@@ -164,6 +171,8 @@
         </TextView>
     </RelativeLayout>
     	<TextView
+        	android:background="@drawable/icon_background_drawable_drawer"
+    	    android:id="@+id/drawer_weblink_webpage"
 	        android:layout_width="match_parent"
 	        android:drawableLeft="@drawable/drawer_tick"
 	        android:layout_height="20dp"
@@ -175,7 +184,9 @@
 	        android:layout_marginTop="30dp"
 	        android:layout_marginBottom="20dp" > 
         </TextView>
-            <TextView
+        <TextView
+            android:id="@+id/drawer_weblink_about"
+        	android:background="@drawable/icon_background_drawable_drawer"
 	        android:layout_width="match_parent"
 	        android:drawableLeft="@drawable/drawer_tick"
 	        android:layout_height="20dp"
@@ -186,7 +197,9 @@
 	        android:layout_marginLeft="20dp"
 	        android:layout_marginBottom="20dp" > 
         </TextView>
-            <TextView
+        <TextView
+            android:id="@+id/drawer_weblink_terms"
+        	android:background="@drawable/icon_background_drawable_drawer"
 	        android:layout_width="match_parent"
 	        android:drawableLeft="@drawable/drawer_tick"
 	        android:layout_height="20dp"
@@ -197,7 +210,9 @@
 	        android:layout_marginLeft="20dp"
 	        android:layout_marginBottom="20dp" > 
         </TextView>
-            <TextView
+        <TextView
+            android:id="@+id/drawer_weblink_contact"
+        	android:background="@drawable/icon_background_drawable_drawer"
 	        android:layout_width="match_parent"
 	        android:drawableLeft="@drawable/drawer_tick"
 	        android:layout_height="20dp"
