--- a/ZoomAndroid/res/layout/page_kes.xml
+++ b/ZoomAndroid/res/layout/page_kes.xml
@@ -2,8 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="match_parent"
 	android:layout_height="match_parent">
-	<include android:id="@+id/include1"
-		android:layout_height="wrap_content" android:layout_width="fill_parent" layout="@layout/layout_title"></include>
+	
+<!-- 	<include android:id="@+id/include1" 
+ 			android:layout_height="wrap_content" 
+			android:layout_width="fill_parent" 
+			layout="@layout/layout_title">
+		</include> 
+		-->
 
 	<ScrollView
 	    android:id="@+id/scrollView1"
@@ -15,6 +20,11 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:orientation="vertical" >
+			
+			<include
+				android:id="@+id/toolbar"
+				layout="@layout/toolbar" >
+				</include>
 
 	        <LinearLayout
 	            android:id="@+id/linearLayout1"
@@ -31,25 +41,24 @@
 	                    android:id="@+id/FrameLayout03"
 	                    android:layout_width="fill_parent"
 	                    android:layout_height="fill_parent"
-	                    android:layout_weight="1"
-	                    android:padding="3dp" >
+	                    android:layout_weight="1" >
 
 	                    <LinearLayout
 	                        android:id="@+id/linearLayoutIcon1"
 	                        android:layout_width="match_parent"
 	                        android:layout_height="match_parent"
-	                        android:background="@drawable/icon_background_drawable"
+	                        android:background="@drawable/icon_background_drawable_color1"
 	                        android:clickable="true"
 	                        android:orientation="vertical"
-	                        android:padding="2dp" >
+	                        android:padding="10dp" >
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
-	                            android:scaleType="centerCrop"
-	                            android:src="@drawable/banke" />
+	                            android:scaleType="fitCenter"
+	                            android:src="@drawable/banks_256" />
 
 	                        <TextView
 	                            android:id="@+id/textViewTitle1"
@@ -58,7 +67,7 @@
 	                            android:gravity="center_horizontal"
 	                            android:text="Banke"
 	                            android:textColor="#ffffff"
-	                            android:textSize="10dp" />
+	                            android:textSize="12sp" />
 	                    </LinearLayout>
 	                </FrameLayout>
 
@@ -66,25 +75,24 @@
 	                    android:id="@+id/FrameLayout02"
 	                    android:layout_width="fill_parent"
 	                    android:layout_height="fill_parent"
-	                    android:layout_weight="1"
-	                    android:padding="3dp" >
+	                    android:layout_weight="1" >
 
 	                    <LinearLayout
 	                        android:id="@+id/linearLayoutIcon2"
 	                        android:layout_width="match_parent"
 	                        android:layout_height="match_parent"
-	                        android:background="@drawable/icon_background_drawable"
+	                        android:background="@drawable/icon_background_drawable_color_atm"
 	                        android:clickable="true"
 	                        android:orientation="vertical"
-	                        android:padding="2dp" >
+	                        android:padding="10dp" >
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
-	                            android:scaleType="centerCrop"
-	                            android:src="@drawable/atm" />
+	                            android:scaleType="fitCenter"
+	                            android:src="@drawable/atms_256" />
 
 	                        <TextView
 	                            android:id="@+id/textViewTitle2"
@@ -93,7 +101,7 @@
 	                            android:gravity="center_horizontal"
 	                            android:text="ATM"
 	                            android:textColor="#ffffff"
-	                            android:textSize="10dp" />
+	                            android:textSize="12sp" />
 	                    </LinearLayout>
 	                </FrameLayout>
 
@@ -101,25 +109,27 @@
 	                    android:id="@+id/FrameLayout01"
 	                    android:layout_width="fill_parent"
 	                    android:layout_height="fill_parent"
-	                    android:layout_weight="1"
-	                    android:padding="3dp" >
+	                    android:layout_weight="1" >
 
 	                    <LinearLayout
 	                        android:id="@+id/linearLayoutIcon3"
 	                        android:layout_width="match_parent"
 	                        android:layout_height="match_parent"
-	                        android:background="@drawable/icon_background_drawable"
+	                        android:background="@drawable/icon_background_drawable_color4"
 	                        android:clickable="true"
 	                        android:orientation="vertical"
-	                        android:padding="2dp" >
+                            android:paddingLeft="2dp"
+                            android:paddingRight="2dp"
+                            android:paddingTop="10dp"
+                            android:paddingBottom="10dp" >
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
 	                            android:layout_weight="1"
-	                            android:scaleType="centerCrop"
-	                            android:src="@drawable/menjacnice" />
+	                            android:scaleType="fitCenter"
+	                            android:src="@drawable/excangeoffice_256" />
 
 	                        <TextView
 	                            android:id="@+id/textViewTitle3"
@@ -128,7 +138,7 @@
 	                            android:gravity="center_horizontal"
 	                            android:text="Menjacnice"
 	                            android:textColor="#ffffff"
-	                            android:textSize="10dp" />
+	                            android:textSize="12sp" />
 	                    </LinearLayout>
 	                </FrameLayout>
 
@@ -136,16 +146,14 @@
 	                    android:id="@+id/frameLayout1"
 	                    android:layout_width="fill_parent"
 	                    android:layout_height="fill_parent"
-	                    android:layout_weight="1"
-	                    android:padding="3dp" >
+	                    android:layout_weight="1" >
 	                </FrameLayout>
 	            </LinearLayout>
 
 	            <FrameLayout
 	                android:id="@+id/FrameLayout1"
 	                android:layout_width="fill_parent"
-	                android:layout_height="240dp"
-	                android:padding="3dp" >
+	                android:layout_height="180dp">
 
 	                <ProgressBar
 	                    android:id="@+id/progressBar1"
